refactor: Refatorando scripts do front-end

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -29,6 +29,8 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./scripts/event-emitter.js"></script>
+    <script src="./scripts/chat-state.js"></script>
+    <script src="./scripts/chat-dom.js"></script>
     <script src="./scripts/web-socket.js"></script>
   </body>
 </html>
