--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>WhatsApp 2</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
