feat: add namespaces e home page

--- a/src/pages/chat.html
+++ b/src/pages/chat.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>WhatsApp 2</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="../public/styles/styles.css" />
   </head>
   <body>
     <div id="content">
@@ -28,9 +28,9 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./scripts/event-emitter.js"></script>
-    <script src="./scripts/chat-state.js"></script>
-    <script src="./scripts/chat-dom.js"></script>
-    <script src="./scripts/web-socket.js"></script>
+    <script src="../public/scripts/event-emitter.js"></script>
+    <script src="../public/scripts/chat-state.js"></script>
+    <script src="../public/scripts/chat-dom.js"></script>
+    <script src="../public/scripts/web-socket.js"></script>
   </body>
 </html>
